# math-compiler

./: CMakeLists.txt  DESIGN.md  README.md  docker-compose.yml  test.math
.cache/clangd/index/: Lexer.cpp.5EAE0D6AB30B473F.idx  Lexer.hpp.C0BCB9544A826DA0.idx  SymbolTable.cpp.08FC9E5DD05D2545.idx  SymbolTable.hpp.443934FF00398519.idx  main.cpp.D5AB840DE7FD2212.idx
docker/: Dockerfile
examples/: test.math
src/: Lexer.hpp  main.cpp
src/Analysis/: Lexer.cpp  Lexer.hpp  LexicalAnalyzer.cpp  LexicalAnalyzer.hpp  SymbolTable.cpp  SymbolTable.hpp
src/analysis/: LexicalAnalyzer.cpp  LexicalAnalyzer.hpp
src/symbol_table/: SymbolEntry.hpp  SymbolTable.cpp  SymbolTable.hpp
src/types/: SymbolEntry.hpp  Token.hpp
